add accept winuiApp to gitignore rules

--- a/.gitignore
+++ b/.gitignore
@@ -424,6 +424,7 @@ test-results/
 *.dmg
 *.app
 
+
 # content below from: https://github.com/github/gitignore/blob/master/Global/macOS.gitignore
 # General
 .DS_Store
@@ -477,3 +478,6 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+
+!FlexHelper.App/
