--- a/FlexHelper.App/FlexHelper.App.csproj
+++ b/FlexHelper.App/FlexHelper.App.csproj
@@ -12,10 +12,14 @@
     <EnableMsixTooling>true</EnableMsixTooling>
   </PropertyGroup>
   <ItemGroup>
+    <Content Remove="Assets\AppIcon\StoreLogo.scale-100.png" />
+    <Content Remove="Assets\AppIcon\StoreLogo.scale-200.png" />
+    <Content Remove="Assets\AppIcon\StoreLogo.scale-400.png" />
     <Content Remove="Assets\NavigationViewIcons\microsoft_logo_1.png" />
     <Content Remove="Assets\WindowIcon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Assets\Square71x71Logo.scale-400.png" />
     <None Remove="MVVM\View\MouseMoverPage.xaml" />
     <None Remove="MVVM\View\SettingsPage.xaml" />
     <None Remove="MVVM\View\ShellPage.xaml" />
