--- a/FlexHelper.App/FlexHelper.App.csproj
+++ b/FlexHelper.App/FlexHelper.App.csproj
@@ -15,11 +15,15 @@
     <PackageCertificateThumbprint>62AAE73DF2CE1C6D5B1B89FDC51CB4BBB21D4025</PackageCertificateThumbprint>
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
-    <AppxPackageDir>D:\work\develops\FLexHelper\FlexHelperAppRelease</AppxPackageDir>
+    <AppxPackageDir>D:\work\develops\FLexHelper\FlexHelperAppReleasePack</AppxPackageDir>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
     <AppxBundle>Never</AppxBundle>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
+
+    <WindowsPackageType>None</WindowsPackageType>
+    <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
+
   </PropertyGroup>
   <ItemGroup>
     <Content Remove="Assets\AppIcon\StoreLogo.scale-100.png" />
