--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 
 /FlexHelperRelease/
 /FlexHelperAppReleaseSelf/
+FlexHelperAppReleaseSelf.zip1
+FlexHelperAppReleaseSelf.zip
 
 # User-specific files
 *.rsuser
