--- a/FlexHelper.App/FlexHelper.App.csproj
+++ b/FlexHelper.App/FlexHelper.App.csproj
@@ -15,8 +15,8 @@
     <ApplicationIcon>FlexHelper.ico</ApplicationIcon>
 
     <!--Сборка в .exe  relaes + unpackage-->
-    <WindowsPackageType>None</WindowsPackageType>
-    <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
+    <!--<WindowsPackageType>None</WindowsPackageType>
+    <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>-->
 
   </PropertyGroup>
 
